// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test getPeaksAnnotation default options 1`] = `
Array [
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 12,
          "y": 1,
        },
        "text": "12.00000",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 12,
          "y": 1,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 12,
        "y": 1,
      },
      Object {
        "dy": "-25px",
        "x": 12,
        "y": 1,
      },
    ],
    "type": "line",
  },
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 24,
          "y": 2,
        },
        "text": "24.00000",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 24,
          "y": 2,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 24,
        "y": 2,
      },
      Object {
        "dy": "-25px",
        "x": 24,
        "y": 2,
      },
    ],
    "type": "line",
  },
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 36,
          "y": 3,
        },
        "text": "36.00000",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 36,
          "y": 3,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 36,
        "y": 3,
      },
      Object {
        "dy": "-25px",
        "x": 36,
        "y": 3,
      },
    ],
    "type": "line",
  },
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 42,
          "y": 4,
        },
        "text": "42.00000",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 42,
          "y": 4,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 42,
        "y": 4,
      },
      Object {
        "dy": "-25px",
        "x": 42,
        "y": 4,
      },
    ],
    "type": "line",
  },
]
`;

exports[`test getPeaksAnnotation shift -12 1`] = `
Array [
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 12,
          "y": 1,
        },
        "text": "0.00001",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 12,
          "y": 1,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 12,
        "y": 1,
      },
      Object {
        "dy": "-25px",
        "x": 12,
        "y": 1,
      },
    ],
    "type": "line",
  },
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 24,
          "y": 2,
        },
        "text": "12.00001",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 24,
          "y": 2,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 24,
        "y": 2,
      },
      Object {
        "dy": "-25px",
        "x": 24,
        "y": 2,
      },
    ],
    "type": "line",
  },
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 36,
          "y": 3,
        },
        "text": "24.00001",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 36,
          "y": 3,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 36,
        "y": 3,
      },
      Object {
        "dy": "-25px",
        "x": 36,
        "y": 3,
      },
    ],
    "type": "line",
  },
  Object {
    "_highlight": undefined,
    "labels": Array [
      Object {
        "color": "red",
        "position": Object {
          "dx": "2px",
          "dy": "-17px",
          "x": 42,
          "y": 4,
        },
        "text": "30.00001",
      },
      Object {
        "color": "grey",
        "position": Object {
          "dx": "2px",
          "dy": "-4px",
          "x": 42,
          "y": 4,
        },
        "text": "Z:undefined",
      },
    ],
    "position": Array [
      Object {
        "dy": "-5px",
        "x": 42,
        "y": 4,
      },
      Object {
        "dy": "-25px",
        "x": 42,
        "y": 4,
      },
    ],
    "type": "line",
  },
]
`;
